fixed image distortion, fixed server.py's "debug" issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,7 +136,7 @@ img {
 .our-mission-header-img {
     max-width: 100%;
     width: 100% !important;
-    max-height: 50vh;
+    max-height: 60vh;
 }
 
 /* FIXME tukushi font doesn't work
